# stock-analysis-platform

./: .env.example  .gitignore  Makefile  README.md
backend/: alembic.ini  pyproject.toml
backend/src/app/: app.py  middleware.py  schemas.py
backend/src/app/routers/: admin.py  chat.py  financial_analysis.py  financial_market.py  financial_ws.py
backend/src/config/: __init__.py  settings.py
backend/src/context/: __init__.py  context_builder.py  news_provider.py
backend/src/data/: financial_stocks_loader.py
backend/src/database/: __init__.py  connection.py  models.py
backend/src/database/migrations/: env.py  script.py.mako
backend/src/llm/: __init__.py  client.py  schemas.py  structured.py
backend/src/llm/extensions/: __init__.py  financial_sentiment.py
backend/src/models/: base_predictor.py  model_factory.py
backend/src/models/predictors/: __init__.py  chronos_predictor.py
backend/src/services/: cache_service.py  chat_service.py  data_processing.py
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChartPanel.tsx  CompanyInfoView.tsx  ForecastPanel.tsx  HelpPanel.tsx  Icon.tsx  LiveChart.tsx  SentimentChatPanel.tsx  SentimentPanel.tsx  StockAnalysisApp.tsx  ThemeToggle.tsx  TickerSearch.tsx  TopBar.tsx
frontend/components/providers/: ReactQueryProvider.tsx  index.ts
frontend/hooks/: useChartManager.ts  useChatSession.ts  useForecastPanel.ts  useSentimentPanel.ts  useStockQueries.ts  useTheme.ts
frontend/lib/: queryClient.ts
frontend/services/: stockDataService.ts
frontend/utils/: ChartManager.ts  formatters.ts  index.ts  stockHelpers.ts  stockMetrics.ts  types.ts
